services/infra/k8s/client-fe-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-fe-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-fe
  template:
    metadata:
      labels:
        app: client-fe
    spec:
      containers:
        - name: client-fe
          image: prosenkiewicz/client-fe
---
apiVersion: v1
kind: Service
metadata:
  name: client-fe-srv
spec:
  selector:
    app: client-fe
  ports:
    - name: client-fe
      protocol: TCP
      port: 3000
      targetPort: 3000
