services/infra/k8s/client-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-mongo
  template:
    metadata:
      labels:
        app: client-mongo
    spec:
      containers:
        - name: client-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: client-mongo-srv
spec:
  selector:
    app: client-mongo
  ports:
    - name: client-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
