services/infra/k8s/lead-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lead-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lead
  template:
    metadata:
      labels:
        app: lead
    spec:
      containers:
        - name: lead
          imagePullPolicy: Never
          image: prosenkiewicz/lead
---
apiVersion: v1
kind: Service
metadata:
  name: lead-srv
spec:
  selector:
    app: lead
  ports:
    - name: lead
      protocol: TCP
      port: 3000
      targetPort: 3000
