services/infra/k8s/monolith-be-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-be-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith-be
  template:
    metadata:
      labels:
        app: monolith-be
    spec:
      containers:
        - name: monolith-be
          image: prosenkiewicz/monolith-be
---
apiVersion: v1
kind: Service
metadata:
  name: monolith-be-srv
spec:
  selector:
    app: monolith-be
  ports:
    - name: monolith-be
      protocol: TCP
      port: 3001
      targetPort: 3001
