services/infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    spec: "ingressClassName"
spec:
  rules:
    - host: mern-microservices.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-fe-srv
                port:
                  number: 3000
          - path: /service/auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /service/admin
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-srv
                port:
                  number: 3000
          - path: /service/lead
            pathType: ImplementationSpecific
            backend:
              service:
                name: lead-srv
                port:
                  number: 3000
          - path: /service/product
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 3000
          - path: /service/client
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: monolith-be-srv
                port:
                  number: 3000
